StringUtil#getRenderingWidth, StringUtil#getRenderingHeight